# meamen

./: .dockerignore  .env  .gitignore  DESIGN.md  Dockerfile  README.MD  README.md  TASKS_TODO.md  TASK_COMPLETED.md  UI_COMPLETED.md  UI_DESIGN.md  UI_TODOS.md  UX_COMMENTS.md  check_trainees.py  eslint.config.js  fly.toml  main.py  openapi.json  package.json  pyproject.toml  render.yaml  setup.cfg  start.ts  tasks.md  test_frontend_fix.js
.github/workflows/: ci.yml
client/: index.html  package.json
client/src/: App.tsx  index.css
design_docs/: DB_SCHEMA.md  DESIGN.md  TODOS.md  UI_DESIGN.md  prompt.md
frontend/: .env.production  .eslintrc.js  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
meamen/: main.py
meamen/api/: auth.py  exercise.py  exercise_record.py  session_template.py  trainees.py  trainers.py  training_session.py  websockets.py
meamen/core/: config.py
meamen/crud/: exercise.py  exercise_record.py  session_template.py  trainee.py  trainer.py  training_session.py
meamen/db/: init_db.py  seed_data.py  session.py
meamen/middleware/: logging.py
meamen/models/: exercise.py  exercise_record.py  exercise_template.py  program.py  session_template.py  trainee.py  trainer.py  training_session.py  user.py
meamen/schemas/: user.py  (+6 more)
plans/: google-oauth-login.md
prisma/: schema.prisma  schema.sqlite.prisma  seed.ts
server/: badges.ts  index.ts
tests/: test_auth.py  test_exercises.py  test_main.py  test_trainees.py  test_trainers.py  test_training_sessions.py
(+116 files in other folders)
